[project]
name = "nightowls"
version = "0.0.1"
authors = [
  { name="Scover", email="thediscover22450@gmail.com" },
]
description = "A CLI tool for your Git repos that analyzes commit frequency per time of day."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/pypa/sampleproject"
Issues = "https://github.com/pypa/sampleproject/issues"